--- a/Readme.Rmd
+++ b/Readme.Rmd
@@ -33,7 +33,7 @@ invisible(packages %>%
       cat("\n")
       cat(.$package_function, "\n")
       cat("\n")
-      cat( '(','GitHub url',')','[',.$git_hub,']', "\n", sep = '')
+      cat( '[','GitHub url',']','(',.$git_hub,')', "\n", sep = '')
       cat("\n")
     })
   )
@@ -52,7 +52,7 @@ invisible(packages %>%
       cat("\n")
       cat(.$package_function, "\n")
       cat("\n")
-      cat( '(','GitHub url',')','[',.$git_hub,']', "\n", sep = '')
+      cat( '[','GitHub url',']','(',.$git_hub,')', "\n", sep = '')
 #      cat( paste0('(','GitHub url',')','[',.$git_hub,']'), "\n", sep = '')
       cat("\n")
     })
@@ -71,7 +71,7 @@ invisible(packages %>%
       cat("\n")
       cat(.$package_function, "\n")
       cat("\n")
-      cat( '(','GitHub url',')','[',.$git_hub,']', "\n", sep = '')
+      cat( '[','GitHub url',']','(',.$git_hub,')', "\n", sep = '')
       cat("\n")
     })
   )
@@ -89,7 +89,7 @@ invisible(packages %>%
       cat("\n")
       cat(.$package_function, "\n")
       cat("\n")
-      cat( '(','GitHub url',')','[',.$git_hub,']', "\n", sep = '')
+      cat( '[','GitHub url',']','(',.$git_hub,')', "\n", sep = '')
       cat("\n")
     })
   )
@@ -107,7 +107,7 @@ invisible(packages %>%
       cat("\n")
       cat(.$package_function, "\n")
       cat("\n")
-      cat( '(','GitHub url',')','[',.$git_hub,']', "\n", sep = '')
+      cat( '[','GitHub url',']','(',.$git_hub,')', "\n", sep = '')
       cat("\n")
     })
   )
@@ -125,7 +125,7 @@ invisible(packages %>%
       cat("\n")
       cat(.$package_function, "\n")
       cat("\n")
-      cat( '(','GitHub url',')','[',.$git_hub,']', "\n", sep = '')
+      cat( '[','GitHub url',']','(',.$git_hub,')', "\n", sep = '')
       cat("\n")
     })
   )
@@ -143,7 +143,7 @@ invisible(packages %>%
       cat("\n")
       cat(.$package_function, "\n")
       cat("\n")
-      cat( '(','GitHub url',')','[',.$git_hub,']', "\n", sep = '')
+      cat( '[','GitHub url',']','(',.$git_hub,')', "\n", sep = '')
       cat("\n")
     })
   )
@@ -161,7 +161,7 @@ invisible(packages %>%
       cat("\n")
       cat(.$package_function, "\n")
       cat("\n")
-      cat( '(','GitHub url',')','[',.$git_hub,']', "\n", sep = '')
+      cat( '[','GitHub url',']','(',.$git_hub,')', "\n", sep = '')
       cat("\n")
     })
   )
@@ -179,7 +179,7 @@ invisible(packages %>%
       cat("\n")
       cat(.$package_function, "\n")
       cat("\n")
-      cat( '(','GitHub url',')','[',.$git_hub,']', "\n", sep = '')
+      cat( '[','GitHub url',']','(',.$git_hub,')', "\n", sep = '')
       cat("\n")
     })
   )
@@ -197,13 +197,13 @@ invisible(packages %>%
       cat("\n")
       cat(.$package_function, "\n")
       cat("\n")
-      cat( '(','GitHub url',')','[',.$git_hub,']', "\n", sep = '')
+      cat( '[','GitHub url',']','(',.$git_hub,')', "\n", sep = '')
       cat("\n")
     })
   )
 ```
 
-## Link
+## Links
 
 ```{r, include=TRUE, echo=FALSE,  results='asis', message=FALSE}
 invisible(packages %>% 
@@ -215,7 +215,7 @@ invisible(packages %>%
       cat("\n")
       cat(.$package_function, "\n")
       cat("\n")
-      cat( '(','GitHub url',')','[',.$git_hub,']', "\n", sep = '')
+      cat( '[','GitHub url',']','(',.$git_hub,')', "\n", sep = '')
       cat("\n")
     })
   )
@@ -233,7 +233,7 @@ invisible(packages %>%
       cat("\n")
       cat(.$package_function, "\n")
       cat("\n")
-      cat( '(','GitHub url',')','[',.$git_hub,']', "\n", sep = '')
+      cat( '[','GitHub url',']','(',.$git_hub,')', "\n", sep = '')
       cat("\n")
     })
   )
